<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <masteringVisualizations.FrequencyVizLayout
                android:id="@+id/visualization"
                android:layout_width="match_parent"
                android:layout_height="275dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@color/black">
                <Spinner
                        android:id="@+id/viz_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/visualization"
                />
        </masteringVisualizations.FrequencyVizLayout>

        <RelativeLayout
                android:id="@+id/eq_panel"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@+id/visualization"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@color/gold"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp">

        <android.support.v7.widget.AppCompatSeekBar
                android:id="@+id/two_fifty_hz"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:thumbTint="@color/colorPrimary"
                android:progressTint="@color/colorPrimary"/>

        <android.support.v7.widget.AppCompatSeekBar
                android:id="@+id/eight_hundred_hz"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:thumbTint="@color/colorPrimary"
                android:progressTint="@color/colorPrimary"
                android:layout_toRightOf="@+id/two_fifty_hz"
                android:layout_toEndOf="@id/two_fifty_hz"/>

        <android.support.v7.widget.AppCompatSeekBar
                android:id="@+id/twenty_five_hundred_hz"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:thumbTint="@color/colorPrimary"
                android:progressTint="@color/colorPrimary"
                android:layout_toRightOf="@id/eight_hundred_hz"
                android:layout_toEndOf="@id/eight_hundred_hz"/>

        <android.support.v7.widget.AppCompatSeekBar
                android:id="@+id/eight_thousand_hz"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:thumbTint="@color/colorPrimary"
                android:progressTint="@color/colorPrimary"
                android:layout_toRightOf="@+id/twenty_five_hundred_hz"
                android:layout_toEndOf="@id/twenty_five_hundred_hz"/>

        <RelativeLayout
                android:id="@+id/filter_panel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/eight_thousand_hz"
                android:layout_toEndOf="@id/eight_thousand_hz"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

                <Button
                        android:id="@+id/lpf_button"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/lpf"/>

                <Spinner
                        android:id="@+id/lpf_spinner"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/lpf_button"
                        android:layout_toEndOf="@id/lpf_button"
                        android:layout_marginTop="5dp"/>

                <Button
                        android:id="@+id/hpf_button"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/lpf_button"
                        android:text="@string/hpf"/>

                <Spinner
                        android:id="@+id/hpf_spinner"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/hpf_button"
                        android:layout_toEndOf="@id/hpf_button"
                        android:layout_below="@+id/lpf_spinner"
                        android:layout_marginTop="25dp"/>

                <Button
                        android:id="@+id/l_shelf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/l_shelf"
                        android:layout_below="@id/hpf_button"/>

                <Button
                        android:id="@+id/h_shelf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/h_shelf"
                        android:layout_below="@id/l_shelf"/>
        </RelativeLayout>

        </RelativeLayout>

        <masteringVisualizations.AudioControlPanel
                android:id="@+id/control_panel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/eq_panel"
                android:background="@color/colorPrimary">

        <Spinner
                android:id="@+id/song_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

        <Button
                android:id="@+id/play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/play"/>

        <Button
                android:id="@+id/pause_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@id/play_button"
                android:layout_toEndOf="@id/play_button"
                android:text="@string/pause"/>

                <Button
                        android:id="@+id/stop_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_toRightOf="@id/pause_button"
                        android:layout_toEndOf="@id/pause_button"
                        android:text="@string/stop" android:layout_alignTop="@+id/control_panel"/>

        <ProgressBar
                android:id="@+id/rms_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/song_selector"
                android:layout_marginLeft="18dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="15dp"/>
        </masteringVisualizations.AudioControlPanel>
</RelativeLayout>